TULIPA_BUILD_WITH_UNICODE()

set(CURRENT_PROJ test_signal)

INCLUDE_DIRECTORIES(
  ${TULIPA_HOME_DIR}
)

LINK_DIRECTORIES(
)

set(HEADER_FILES
)

set(SOURCE_FILES 
  ${TULIPA_HOME_DIR}/tests/test_common/test_signal/main.cpp
)

set(RESOURCE_FILES
)


SOURCE_GROUP("Header Files" FILES ${HEADER_FILES})
SOURCE_GROUP("Source Files" FILES ${SOURCE_FILES})
SOURCE_GROUP("Resource Files" FILES ${RESOURCE_FILES})

ADD_EXECUTABLE(${CURRENT_PROJ} ${HEADER_FILES} ${SOURCE_FILES} ${RESOURCE_FILES})

TARGET_LINK_LIBRARIES(${CURRENT_PROJ} common) 
SET_TARGET_PROPERTIES(${CURRENT_PROJ} PROPERTIES FOLDER "tests/test_common")

TULIPA_CONFIG_OUTPUT_PATHS(${CURRENT_PROJ})